--- a/index.html
+++ b/index.html
@@ -4,11 +4,69 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" src="Css/Style.css">
+    <title>Crpyto Opportunity Table</title>
+    <link rel="stylesheet" href="Css/Style.css">
 </head>
 <body>
     
+<div class="contaigner">
+    <aside id="panel">
+        <p>Coin Adı</p>
+        <input type="text">
+        <p>Hedefler</p>
+        <input type="number">
+        <input type="number">
+        <input type="number">
+        <p>Piyasa Değeri</p>
+        <input type="number">
+        <p>Arz ve Toplam Arz</p>
+        <input type="number">
+        <input type="number">
+        <input class="btn" value="Ekle" type="button">
+    </aside>
+    <main id="table">
+        <table>
+            <thead>
+                <tr>
+                    <td colspan="2" class="green">Çok Düşük</td>
+                    <td colspan="2" class="orange">Düşük</td>
+                    <td colspan="2" class="red">Yüksek</td>
+                    <td colspan="2" class="purple">Çok Yüksek</td>
+                </tr>
+            </thead>
+            <tr>
+                <th>Coin Ad</th>
+                <td>Coin Türü</td>
+                <td>Hedef 1</td>
+                <td>Hedef Tepe</td>
+                <td>Piyasa Değeri</td>
+                <td>Hedef 1 PD</td>
+                <td>Hedef Tepe PD</td>
+                <th>Puan</th>
+            </tr>
+            <tr>
+                <th>Coin Ad</th>
+                <td>Coin Türü</td>
+                <td>Hedef 1</td>
+                <td>Hedef Tepe</td>
+                <td>Piyasa Değeri</td>
+                <td>Hedef 1 PD</td>
+                <td>Hedef Tepe PD</td>
+                <th>Puan</th>
+            </tr>
+            <tr>
+                <th>Coin Ad</th>
+                <td>Coin Türü</td>
+                <td>Hedef 1</td>
+                <td>Hedef Tepe</td>
+                <td>Piyasa Değeri</td>
+                <td>Hedef 1 PD</td>
+                <td>Hedef Tepe PD</td>
+                <th>Puan</th>
+            </tr>
+        </table>
+    </main>
+</div>
 
 
 
