--- a/index.html
+++ b/index.html
@@ -12,20 +12,26 @@
 <div class="contaigner">
     <aside id="panel">
         <p>Coin Adı</p>
-        <input type="text">
+        <input id="cad" placeholder="Coin Adı" type="text">
         <p>Hedefler</p>
-        <input type="number">
-        <input type="number">
-        <input type="number">
+        <input id="fiyat" placeholder="Fiyat" type="number">
+        <input id="hedef1" placeholder="1. Hedefi" type="number">
+        <input id="hedef2" placeholder="Tepe Hedefi" type="number">
         <p>Piyasa Değeri</p>
-        <input type="number">
+        <input id="pd" placeholder="Piyasa Değeri" type="number">
+        <select name="" id="milyon-milyar">
+            <option value="milyon">milyon</option>
+            <option value="milyar">milyar</option>
+        </select>
         <p>Arz ve Toplam Arz</p>
-        <input type="number">
-        <input type="number">
-        <input class="btn" value="Ekle" type="button">
+        <div class="radio">
+        <input name="supply" type="radio"> Eşit / Yakın 
+        <input name="supply" type="radio"> Çok Açık
+        </div>
+        <input class="btn" value="Ekle" onclick="ekle()" type="button">
     </aside>
     <main id="table">
-        <table>
+        <table id="rtable">
             <thead>
                 <tr>
                     <td colspan="2" class="green">Çok Düşük</td>
@@ -36,7 +42,7 @@
             </thead>
             <tr>
                 <th>Coin Ad</th>
-                <td>Coin Türü</td>
+                <td>Fiyat</td>
                 <td>Hedef 1</td>
                 <td>Hedef Tepe</td>
                 <td>Piyasa Değeri</td>
@@ -44,26 +50,7 @@
                 <td>Hedef Tepe PD</td>
                 <th>Puan</th>
             </tr>
-            <tr>
-                <th>Coin Ad</th>
-                <td>Coin Türü</td>
-                <td>Hedef 1</td>
-                <td>Hedef Tepe</td>
-                <td>Piyasa Değeri</td>
-                <td>Hedef 1 PD</td>
-                <td>Hedef Tepe PD</td>
-                <th>Puan</th>
-            </tr>
-            <tr>
-                <th>Coin Ad</th>
-                <td>Coin Türü</td>
-                <td>Hedef 1</td>
-                <td>Hedef Tepe</td>
-                <td>Piyasa Değeri</td>
-                <td>Hedef 1 PD</td>
-                <td>Hedef Tepe PD</td>
-                <th>Puan</th>
-            </tr>
+
         </table>
     </main>
 </div>
