Added prevent() and converting functions
added Prevent() that limits length of #pd input

added some if controls that helps to converts "milyon" to "milyar"

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <input id="hedef1" placeholder="1. Hedefi" type="number">
         <input id="hedef2" placeholder="Tepe Hedefi" type="number">
         <p>Piyasa Değeri</p>
-        <input id="pd" placeholder="Piyasa Değeri" type="number">
+        <input id="pd" placeholder="Piyasa Değeri" oninput="prevent(this)" type="number">
         <select name="" id="milyon-milyar">
             <option value="milyon">milyon</option>
             <option value="milyar">milyar</option>
