added If Controls
added if controls to calculate end result.

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         </select>
         <p>Arz ve Toplam Arz</p>
         <div class="radio">
-        <input name="supply" type="radio"> Eşit / Yakın 
-        <input name="supply" type="radio"> Çok Açık
+        <input name="supply" id="puan1" value="1" type="radio"> Eşit / Yakın 
+        <input name="supply" id="puan2" value="0" type="radio"> Çok Açık
         </div>
         <input class="btn" value="Ekle" onclick="ekle()" type="button">
     </aside>
