Added Responsive and Header
Added @media tag and added #header class

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     
+    <header id="header">
+        <h1>Kripto Fırsat Tablosu</h1>
+    </header>    
 <div class="contaigner">
     <aside id="panel">
         <p>Coin Adı</p>
