Added Fibonacci.png Added Fibonacci Calculations
added img to be more clear what is needed.

Added fibonacci calculations

--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
     <aside id="panel">
         <p>Coin Adı</p>
         <input id="cad" placeholder="Coin Adı" type="text">
-        <p>Hedefler</p>
-        <input id="fiyat" placeholder="Fiyat" type="number">
-        <input id="hedef1" placeholder="1. Hedefi" type="number">
-        <input id="hedef2" placeholder="Tepe Hedefi" type="number">
+        <p>Hesaplama</p>
+        <img src="Img/Fibonacci.png" alt="">
+        <input id="enyuksek" placeholder="b değeri" oninput="prevent(this)" type="number">
+        <input id="endusuk" placeholder="c değeri" oninput="prevent(this)" type="number">
+        <input id="fiyat" placeholder="Güncel Fiyat" oninput="prevent(this)" type="number">
         <p>Piyasa Değeri</p>
         <input id="pd" placeholder="Piyasa Değeri" oninput="prevent(this)" type="number">
         <select name="" id="milyon-milyar">
