Prevented submitting before filling + Added  Warning + Added toPrecision
-Added toPrecision
-Added Warning
-Prevented Submittin before Filling the Form

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     </header>    
 <div class="contaigner">
     <aside id="panel">
+        <div id="uyari"></div>
         <p>Coin Adı</p>
         <input id="cad" placeholder="Coin Adı" type="text">
         <p>Hesaplama</p>
